--- a/package.json
+++ b/package.json
@@ -29,7 +29,7 @@
   },
   "private": true,
   "dependencies": {
-    "@nrwl/angular": "9.2.4",
+    "@angular-architects/ddd": "^1.1.4",
     "@angular/animations": "^9.1.0",
     "@angular/common": "^9.1.0",
     "@angular/compiler": "^9.1.0",
@@ -38,15 +38,19 @@
     "@angular/platform-browser": "^9.1.0",
     "@angular/platform-browser-dynamic": "^9.1.0",
     "@angular/router": "^9.1.0",
+    "@nrwl/angular": "9.2.4",
     "core-js": "^2.5.4",
     "rxjs": "~6.5.4",
+    "tslib": "^1.10.0",
     "zone.js": "^0.10.2"
   },
   "devDependencies": {
+    "@angular-devkit/build-ng-packagr": "~0.901.5",
     "@angular/cli": "9.1.0",
     "@nrwl/workspace": "9.2.4",
     "@types/node": "~8.9.4",
     "dotenv": "6.2.0",
+    "ng-packagr": "^9.0.0",
     "ts-node": "~7.0.0",
     "tslint": "~6.0.0",
     "eslint": "6.8.0",
